# microbrain

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py  setup_instructions.txt  temp_get_install_dir.py
MicroBrain/: version.py
modelling/: dsurf_modelling.py  mbrain_modelling.py
preprocessing/: dsurf_preproc.py  mbrain_preproc.py
scripts/: 2q  acqparam.txt  deform-mesh_level_1_output_000.vtp  deform-mesh_level_1_output_001.vtp  deform-mesh_level_1_output_002.vtp  deform-mesh_level_1_output_003.vtp  deform-mesh_level_1_output_004.vtp  deform-mesh_level_1_output_005.vtp  deform-mesh_level_1_output_006.vtp  deform-mesh_level_1_output_007.vtp  deform-mesh_level_1_output_008.vtp  deform-mesh_level_1_output_009.vtp  deform-mesh_level_1_output_010.vtp  deform-mesh_level_1_output_011.vtp  deform-mesh_level_1_output_012.vtp  deform-mesh_level_1_output_013.vtp  deform-mesh_level_1_output_014.vtp  deform-mesh_level_1_output_015.vtp  deform-mesh_level_1_output_016.vtp  deform-mesh_level_1_output_017.vtp  deform-mesh_level_1_output_018.vtp  deform-mesh_level_1_output_019.vtp  deform-mesh_level_1_output_020.vtp  deform-mesh_level_1_output_021.vtp  deform-mesh_level_1_output_022.vtp  deform-mesh_level_1_output_023.vtp  deform-mesh_level_1_output_024.vtp  deform-mesh_level_1_output_025.vtp  deform-mesh_level_1_output_026.vtp  deform-mesh_level_1_output_027.vtp  deform-mesh_level_1_output_028.vtp  deform-mesh_level_1_output_029.vtp  deform-mesh_level_1_output_030.vtp  deform-mesh_level_1_output_031.vtp  deform-mesh_level_1_output_032.vtp  (+181 more)
(+25 files in other folders)
