[metadata]
name = microbrain
url = https://github.com/grahamlittlephd/microbrain
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = None
description = Template to start a personal research code base
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

packages = find:
include_package_data = True

[options]
python_requires = >=3.7
setup_requires = packaging >=19.0
install_requires =
      nibabel >= 3.0
      dipy >= 1.5
      matplotlib >= 3.0

[options.extras_require]
test =
      flake8
      fury
      dipy